# WiFi-Captive-Portal

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pytest.ini  requirements-dev.txt  requirements.txt
.planning/: feature-analysis.md  wifi-controller-research.md
.planning/quick/: pms-research-260325.md
alembic/: env.py
alembic/versions/: 00000000_base_schema.py  00000001_seed_data.py  a1b2c3d4_add_performance_indexes.py  b2c3d4e5_phase3_tables.py  c3d4e5f6_dhcp_config.py  d5e6f7a8_mac_bypass_walled_garden.py  e6f7a8b9_alter_macaddr_to_varchar.py  f0b338e7_add_opera_fias_opera_cloud_adapter_types.py  (+1 more)
app/: main.py
docs/: features.md  gui-installer-guide.md  installation-guide.md  user-manual.md
installer/: build.sh  main.py  requirements.txt  wifi-portal-installer.spec
scripts/: dev-with-emulator.sh  install.sh  setup-dnsmasq.sh  setup-iptables.sh  setup-nftables.sh  setup-tc.sh  test.sh  uninstall.sh
tests/: conftest.py
tools/fias-emulator/: .gitignore  README.md  install.sh  pyproject.toml  test-select-fix.sh
tools/fias-emulator/emulator/: __init__.py  config.py  database.py  fias_server.py  main.py  management.py  models.py  schemas.py  seed_data.py
tools/fias-emulator/emulator/static/css/: select-fix.css
tools/fias-emulator/emulator/templates/: base.html  dashboard.html
tools/fias-emulator/emulator/templates/pages/: activity.html  connections.html  failure_rules.html  guests.html  scenarios.html
tools/fias-emulator/tests/: __init__.py  conftest.py  test_database.py  test_fias_server.py  test_management.py
(+138 files in other folders)
